--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unit10hw",
+  "name": "teamgenerator",
   "version": "1.0.0",
-  "description": "OOP and testing for week 10 homework",
+  "description": "Create team profile",
   "main": "app.js",
   "directories": {
     "lib": "lib",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
+    "url": "git+https://github.com/Veron-star/teamgenerator.git"
   },
-  "author": "",
+  "author": "Veronica",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/stevetrilogy/unit10hw/issues"
+    "url": "https://github.com/Veron-star/teamgenerator/issues"
   },
-  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
+  "homepage": "https://github.com/Veron-star/teamgenerator#readme",
   "dependencies": {
     "inquirer": "^6.3.1"
   },
